# src/main/kotlin/com/wutsi/twitter/endpoint/RevokeSecretController.kt
@@ -5,6 +5,7 @@ import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.`annotation`.DeleteMapping
 import org.springframework.web.bind.`annotation`.PathVariable
 import org.springframework.web.bind.`annotation`.RestController
+import javax.validation.constraints.NotNull
 import kotlin.Long
 
 @RestController
@@ -12,8 +13,8 @@ public class RevokeSecretController(
     private val `delegate`: RevokeSecretDelegate
 ) {
     @DeleteMapping("/v1/twitter/secrets/{id}")
-    @PreAuthorize(value = "hasAuthority('twitter')")
-    public fun invoke(@PathVariable(name = "id") id: Long) {
+    @PreAuthorize(value = "hasAuthority('twitter-manage')")
+    public fun invoke(@PathVariable(name = "id") @NotNull id: Long) {
         delegate.invoke(id)
     }
 }
